--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -46,34 +46,34 @@ body
         .features-list__item.features-list__item--1
           .features-list__image
           .features-list__text
-            | Конкурентоспособная заработная плата.
+            | Конкурентоспособная заработная плата;
             br
-            | Система бонусов.
+            | Система бонусов
         .features-list__item.features-list__item--2
           .features-list__image
           .features-list__text
             | Корпоративный
             br
-            | автомобиль.
+            | автомобиль
         .features-list__item.features-list__item--3
           .features-list__image
           .features-list__text
             | Расширенный
             br
-            | социальный пакет.
+            | социальный пакет
       .features-list.features-list--2
         .features-list__item.features-list__item--4
           .features-list__image
           .features-list__text
             | Мобильная связь
             br
-            | и портативный компьютер.
+            | и портативный компьютер
         .features-list__item.features-list__item--5
           .features-list__image
           .features-list__text
             | Обучение и возможности
             br
-            | для развития.
+            | для развития
 
   .line#target
     .container
@@ -157,23 +157,27 @@ body
           .test-list__title
             | Онлайн-тестирование
           .test-list__text
-            | Понадобятся несколько
+            | Понадобятся до 40 минут
             br
-            | минут твоего времени
+            | твоего времени в любом
+            br
+            | удобном для тебя месте
         .test-list__item.test-list__item--3
           .test-list__icon
           .test-list__title
             | Онлайн-интервью
           .test-list__text
-            | Будь готов записать несколько
+            | Будь готов ответить
             br
-            | своих ответов на видео
+            | на вопросы по своему
+            br
+            | профессиональному опыту
         .test-list__item.test-list__item--4
           .test-list__icon
           .test-list__title
             | Знакомство в офисе
           .test-list__text
-            | В случае успеха - с тобой
+            | В случае успеха с тобой
             br
             | свяжутся наши специалисты.
 
